changed bg color

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Sheiva Rezvani's Site</title>
 	<style type="text/css">
 		body{
-			background-color: green;
+			background-color: pink;
 			font-family: Arial, Helvetica, sans-serif;
 		}
 
