added a link and an image

--- a/index.html
+++ b/index.html
@@ -15,5 +15,11 @@
 	<h1>Welcome to Sheiva's Site</h1>
 	<p>This is my site!</p>
 	<p>Hey a second paragraph!</p>
+	<p>I am a big fan of <a href="http://www.vh1.com/shows/rupauls-drag-race">RuPaul's Dragrace</a></p>
+	<img src="28043911071_027d739344_b.jpg">
 </body>
 </html>
+
+
+
+
