--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 	<title>Sheiva Rezvani's Site</title>
 	<style type="text/css">
 		body{
-			background-color: pink;
-			font-family: Arial, Helvetica, sans-serif;
+			background-color: #62B6CB;
+			color: #01375B;
+			font-family: Impact, Charcoal, sans-serif;
 		}
 
 	</style>
